// Vitest Snapshot v1

exports[`Scrollable > renders correctly 1`] = `
VueWrapper {
  "__app": {
    "_component": [Object],
    "_container": <div … />,
    "_context": [Object],
    "_instance": [Object],
    "_props": null,
    "_uid": 0,
    "component": [Function],
    "config": [Object],
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.2.37",
  },
  "__setProps": [Function],
  "componentVM": {
    "autoHeight": false,
    "hasOwnProperty": [Function],
    "horizontalScroll": false,
    "maxHeight": "300px",
  },
  "isDisabled": [Function],
  "rootVM": {},
  "wrapperElement": <span
    data-v-5e315bd5=""
    height="20"
    id="scrollable"
    width="300"
  >
    <div … />
  </span>,
}
`;

exports[`SkeletonText > renders correctly 1`] = `
VueWrapper {
  "__app": {
    "_component": [Object],
    "_container": <div … />,
    "_context": [Object],
    "_instance": [Object],
    "_props": null,
    "_uid": 0,
    "component": [Function],
    "config": [Object],
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.2.37",
  },
  "__setProps": [Function],
  "componentVM": {
    "computedStyle": [Object],
    "hasOwnProperty": [Function],
    "height": "20",
    "width": "300",
  },
  "isDisabled": [Function],
  "rootVM": {},
  "wrapperElement": <div
    class="skeleton__container"
    data-v-58efc24d=""
    style="--width: 300px; --height: 20px;"
  />,
}
`;
